--- a/config/config.json
+++ b/config/config.json
@@ -4,17 +4,20 @@
     "password": "password",
     "database": "ti-shop",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql2",
+    "port": 3306
   },
   "test": {
     "username": "root",
     "password": "password",
     "database": "ti-shop",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql2",
+    "port": 3306
   },
   "production": {
     "use_env_variable": "MYSQL_URL",
-    "dialect": "mysql"
+    "dialect": "mysql2",
+    "port": 3306
   }
 }
