fix incorrect table name in productsDao & usersDao

--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,6 @@
   },
   "production": {
     "use_env_variable": "MYSQL_URL",
-    "dialect": "mysql2",
-    "port": 3306
+    "dialect": "mysql2"
   }
 }
